# libcmtspeechdata

./: Makefile  Makefile.am  README  README.simple  alsa2.c  alsa_test.c  atest.c  cmtspeech.h  cmtspeech_backend_common.c  cmtspeech_backend_common.h  cmtspeech_config.h  cmtspeech_config.h.in  cmtspeech_msgs.c  cmtspeech_msgs.h  cmtspeech_nokiamodem.c  cmtspeech_null.c  cmtspeech_ramp_test.c  configure.ac  dsp.c  dsp2.c  libcmtspeechdata.pc.in  libcmtspeechdata.ver  loop.c  mkit  pa_test.c  rawplay.c  run  run2  sal_debug.c  sal_debug.h  sal_ring.h  test_cmtspeech.c  test_cmtspeech_msgs.c  test_ring.c
debian/: changelog  control  libcmtspeechdata.install  rules  xsession
doc/: Makefile.am  README-devel.txt  doxygen.cfg.in  libcmtspeechdata_api_docs_main.txt
dummy-backend/: Makefile.am  cmtspeech_dummy.c  cmtspeech_dummy.h  dummy_common.c  dummy_common.h
kernel-headers/linux/: cs-protocol.h
utils/: alsa.c  audio.c  audio.h  cmtspeech_ofono_test.c  dsp.c  pulse.c  send_cmtspeech_reset.c
